gnome-xkb-info: Fix memory leak

We need to free the current iso639Id string when it doesn't replace a
previous one in the hash table.

https://bugzilla.gnome.org/show_bug.cgi?id=684140